--- a/day2/index.html
+++ b/day2/index.html
@@ -1,22 +1,19 @@
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<link rel="stylesheet" href="css/styles.css" />
-	</head>
-	<body>
-		<div class="frame">
-			<div class="center">
-				<div class="number">
-					<div class="one-one"></div>
-					<div class="one-two"></div>
-					<div class="zero-one"></div>
-					<div class="zero-two"></div>
-				</div>
-				<div class="big">DAYS</div>
-				<div class="small">css challenge</div>
-			</div>
-		</div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="frame">
+      <div class="center">
+        <div class="menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
