chore: use other ways

--- a/day2/index.html
+++ b/day2/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="frame">
-      <div class="center">
-        <div class="menu">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-      </div>
-    </div>
+    <main class="frame">
+      <label id="toggle" class="center">
+        <div class="bar" aria-label="Toggle menu"></div>
+        <div class="bar" aria-label="Toggle menu"></div>
+        <div class="bar" aria-label="Toggle menu"></div>
+      </label>
+    </main>
   </body>
 </html>
