feat: add some codes of day4 day5

--- a/day4/index.html
+++ b/day4/index.html
@@ -1,4 +1,3 @@
-<!-- https://codepen.io/Jescad29/pen/abxQPPm -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,9 +8,12 @@
   </head>
   <body>
     <div class="frame">
+      <div>frame 1</div>
       <div class="center">
         <div class="dot-1"></div>
+        center
         <div class="dot-2"></div>
+        center
         <div class="dot-3"></div>
       </div>
     </div>
