--- a/day1/index.html
+++ b/day1/index.html
@@ -1,19 +1,25 @@
+<!-- https://codepen.io/sunpochin/pen/BaejENa -->
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="scripts.js" defer></script>
   </head>
   <body>
     <div class="frame">
-      <div class="center">
-        <div class="menu">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
+        <div class="container">
+            <div class="number">
+                <div class="one-one"></div>
+                <div class="one-two"></div>
+                <div class="zero-one"></div>
+                <div class="zero-two"></div>
+            </div>
+            <span class="big-text">days</span>
+            <span class="small-text">css challenge</span>
         </div>
-      </div>
     </div>
   </body>
 </html>
