chore: 0506, I'm going to DJ in Brass Monkey. So I need to work harder today.

--- a/day19/index.html
+++ b/day19/index.html
@@ -15,7 +15,7 @@
 			kakah
 			kaka
 			I must work harder today
-			I must write tomoroll
+			0506, I'm going to DJ in Brass Monkey. So I need to work harder today.
 		</div>
 	</body>
 
